=================
Changes for crash
=================

Unreleased
==========

Changes
-------

 - BREAKING: Dropped support for Python 2.7 and 3.3
   If you are using crash with Python 2.7 or 3.3 already, you will not be able
   to install newer versions of this package.


2017/12/15 0.23.0
=================

Changes
-------

 - Added support for password authentication.

 - Added support for pasting and executing multiple statements at once.

 - The `\r` (read) command auto-completion now also shows directories, instead
   of only files ending in `.sql`

Fixes
-----

2017/11/13 0.22.3
=================

 - Fixed an error caused by using the ``\verbose`` command before using
   ``\connect`` to connect to a host.

 - Exit Crash correctly if an error occurs on startup, such as invalid host
   format or unauthorized access to CrateDB.

 - Do not show connect message on startup by default but only when starting
   crash in verbose mode. This prevents the programme from printing the message
   to stdout when using the command mode or executing ``--sysinfo``.

2017/10/11 0.22.2
=================

 - Fixed an issue where BACKSPACE would delete more characters before the
   cursor than expected.

 - Added back support for multiline table headers

2017/08/21 0.22.1
=================

 - Remove support for multiline table headers

2017/08/21 0.22.0
=================

 - Added a status toolbar that prints the current session info.

 - added support for multiline table headers in the tabular output format

 - Start autocompletion for non-command keys at the 3rd character.

2017/08/21 0.21.5
=================

 - Updated crate-python to 0.20.1 which includes the following change:

   - Fixed deprecation warnings logged in CrateDB server on every REST request.

2017/07/24 0.21.4
=================

 - Fixed: ``\verbose`` command didn't not switch on verbosity if ``crash`` was
   launched without the ```--verbose` flag.

2017/07/11 0.21.3
=================
